--- a/frontend_Admin/src/index.css
+++ b/frontend_Admin/src/index.css
@@ -241,3 +241,22 @@ input {
     --radius: 0.5rem;
   }
 }
+.loader {
+    height: 18px;
+    aspect-ratio: 1;
+    border: 2px solid #FFF;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+    } 
